Fix webkit rounded button on iOS

--- a/app/assets/stylesheets/application/placeholders/_buttons.scss
+++ b/app/assets/stylesheets/application/placeholders/_buttons.scss
@@ -7,6 +7,8 @@
   text-align: center;
   text-decoration: none;
   word-spacing: 1px;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
 }
 
 %primary-button {
